--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<article>
-  <div id = '1'>1</div>
-  <div id = '2'>2</div>
-  <div id = '3'>3</div>
-  <div id = '4'>4</div>
-  <div id = '5'>5</div>
-  <div id = '6'>6</div>
-  <div id = '7'>7</div>
-  <div id = '8'>8</div>
-  <div id = '9'>9</div>
+<div id='gameBoard'>
+  
 
+</div>
 
 </article>
   
