updated css to make board visible

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 <div id='gameBoard'>
-  
+  <div>  </div>
+  <div>  </div>
+  <div>  </div>
+  <div>  </div>
+  <div>  </div>
+  <div>  </div>
+  <div>  </div>
+  <div>  </div>
+  <div>  </div>
 
 </div>
 
