--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div>It is </div><div id='turn'>Yellow's</div><div>'s turn!</div>
+<input type="text" id='color1'>
+<input type="text" id='color2'>
+<button id='myBtn'>Update colors</button>
 <div id='gameBoard'>
-<div id='0'></div>
-<div id='1'></div>
-<div id='2'></div>
-<div id='3'></div>
-<div id='4'></div>
-<div id='5'></div>
-<div id='6'></div>
-<div id='7'></div>
-<div id='8'></div>
+<div id='0' class='piece'></div>
+<div id='1' class='piece'></div>
+<div id='2' class='piece'></div>
+<div id='3' class='piece'></div>
+<div id='4' class='piece'></div>
+<div id='5' class='piece'></div>
+<div id='6' class='piece'></div>
+<div id='7' class='piece'></div>
+<div id='8' class='piece'></div>
+
 
 
 </div>
 
 </article>
+<div id="mydiv" style="border-style:none; position:absolute; left:-9999px; top:-9999px;"></div>
   
   <button id='move'>click</button>
 
