reduced board size and fine tuned color selection

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Document</title>
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-<div>It is </div><div id='turn'>Yellow's</div><div>'s turn!</div>
+<body id='body'>
+<div>It is </div><div id='turn'>WHITE's</div><div>'s turn!</div>
 <input type="text" id='color1'>
 <input type="text" id='color2'>
 <button id='myBtn'>Update colors</button>
