added reset button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div>It is </div><div id='turn'>WHITE's</div><div>'s turn!</div>
 <input type="text" id='color1'>
 <input type="text" id='color2'>
-<button id='myBtn'>Update colors</button>
+<button id='myBtn' class='myBtn'>Update colors</button>
 <div id='gameBoard'>
 <div id='0' class='piece'></div>
 <div id='1' class='piece'></div>
@@ -28,7 +28,7 @@
 </article>
 <div id="mydiv" style="border-style:none; position:absolute; left:-9999px; top:-9999px;"></div>
   
-  <button id='move'>click</button>
+  <button id='move'>Reset Game</button>
 
 
 <script type="text/javascript" src="app.js"></script>
