--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <div id='8' class='piece'></div>
 
 
-
 </div>
+<div id='message'> </div>
 
 </article>
 <div id="mydiv" style="border-style:none; position:absolute; left:-9999px; top:-9999px;"></div>
