updated readme.MD file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body id='body'>
 <div>It is </div><div id='turn'>WHITE's</div><div>'s turn!</div>
+
+<div></div>
 <input type="text" id='color1'>
 <input type="text" id='color2'>
 <button id='myBtn' class='myBtn'>Update colors</button>
@@ -29,7 +31,6 @@
 <div id="mydiv" style="border-style:none; position:absolute; left:-9999px; top:-9999px;"></div>
   
   <button id='move'>Reset Game</button>
-
 
 <script type="text/javascript" src="app.js"></script>
 </body>
