--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id='body'>
-<link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-<div class='turnShower'>It is </div class='turnShower'><div id='turn'>WHITE's</div><div class='turnShower'>'s turn!</div>
+<link href='https://fonts.googleapis.com/css?family=Lato:400' rel='stylesheet' type='text/css'>
+
+<div id='turndeclarer'>
+  
+<div class='turnShower' id='itis'>It is </div class='turnShower'><div class='turnShower' id='turn'> WHITE</div><div class='turnShower'>'s turn!</div>
+</div>
 
 <div></div>
 <input type="text" id='color1'>
@@ -21,7 +25,7 @@
 <div id="myModal" class="modal">
 
   <!-- Modal content -->
-  <div class="modal-content">
+  <div id="modalContent" class="modal-content">
     <span class="close">x</span>
     <p id='alert'>Some text in the Modal..</p>
   </div>
