added copy of wireframe

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 <div class='turnShower' id='itis'>It is </div class='turnShower'><div class='turnShower' id='turn'> WHITE</div><div class='turnShower'>'s turn!</div>
 </div>
 
-<div></div>
+<div id="colortypes">
 <input type="text" id='color1'>
 <input type="text" id='color2'>
 <button id='myBtn' class='myBtn'>Update colors</button>
+
+</div>
 
 <!-- Trigger/Open The Modal -->
 
